# uzen

./: .deepsource.toml  .dockerignore  .env.sample  .env.test  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  app.dockerfile  app.json  docker-compose.yml  init_db.py  mypy.ini  pyproject.toml  test.py  test.rb  webpack.config.js  worker.dockerfile
.circleci/: config.yml
app/: __init__.py  main.py  sentry.py  types.py
app/api/: api.py  constants.py
app/arq/: constants.py  settings.py  utils.py  worker.py
app/builders/: match.py  rule.py  snapshot.py
app/cache/: backend.py  constants.py  decorator.py  key_builder.py
app/core/: constants.py  datastructures.py  events.py  exceptions.py  settings.py
app/database/: __init__.py  fields.py
app/dataclasses/: __init__.py  browser.py  certificate.py  har.py  ip2asn.py  search.py  similarity.py  utils.py  whois.py
app/factories/: certificate.py  classification.py  classifications.py  dns_record.py  dns_records.py  domain.py  har.py  html.py  indicators.py  ip_address.py  job_status.py  match.py  rule.py  script.py  scripts.py  snapshot.py  status.py  stylesheet.py  whois.py
app/models/: __init__.py  api_keys.py  base.py  certificate.py  certificates.py  classification.py  classifications.py  dns_record.py  dns_records.py  fields.py  file.py  har.py  html.py  match.py  matches.py  mixin.py  rule.py  rules.py  script.py  scripts.py  snapshot.py  snapshots.py  stylesheet.py  tag.py  whois.py
app/schemas/: __init__.py  api_key.py  base.py  certificate.py  classification.py  classifications.py  common.py  device.py  dns_record.py  dns_records.py  domain.py  file.py  har.py  html.py  indicators.py  ip_address.py  job.py  match.py  matches.py  mixin.py  rule.py  rules.py  screenshot.py  script.py  scripts.py  search.py  similarity.py  snapshot.py  snapshots.py  status.py  stylesheet.py  types.py  utils.py  whois.py  yara.py
app/services/: browser.py  certificate.py  fake_browser.py  har.py  html2text.py  ip2asn.py  matches_converter.py  rdap.py  rule_matcher.py  screenshot.py  similarity_scanner.py  snapshot.py  urlscan.py  utils.py  whois.py  yara_scanner.py
app/tasks/: __init__.py  classification.py  classifications.py  dns_record.py  dns_records.py  enrichment.py  match.py  matches.py  screenshot.py  script.py  scripts.py  similarity.py  snapshot.py  snapshots.py  stylesheet.py  yara.py
app/types/: __init__.py  ulid.py
app/utils/: browser.py  cache.py  chunk.py  hash.py  http.py  minio.py  network.py  screenshot.py  script.py  snapshot.py  ulid.py  url.py  validator.py
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: App.vue  api-helper.ts  api.ts  config.ts  constants.ts  languages.ts  main.ts  shims-tsx.d.ts  store.ts  types.ts
migrations/: env.py
migrations/versions/: 003ba4793075_create_snapshots_table.py  3ba82a0e5139_create_rules_table.py  5b1bcd20aa9f_add_request_field_to_snapshots.py  7512c0c3ef65_restart_alembic_migrations.py  76985f5d686b_add_classifications.py  830b79ba652c_add_submitted_url_to_snapshots.py  b1cf161d2071_add_scripts_table.py  bbf1044f6599_add_dns_records.py  c7bdfeb4515e_add_certificate_to_snapshots.py  d45b0695ce9d_create_screenshots_table.py  d4b75b82a761_add_whois_to_snapshots.py  d78a3a9a5685_create_matches_table.py
mysql/: Dockerfile
mysql/initdb.d/: init.sql
scripts/: check.py
src/: App.vue  types.ts
src/components/: Counter.vue  Navbar.vue  SnapshotForm.vue  YaraForm.vue
src/views/: Home.vue  Import.vue  Snapshots.vue
tests/: conftest.py  fake_arq.py  helper.py  test_app.py  test_browser.py  test_certificate.py  test_urlscan.py  test_utils.py  test_yara.py  testclient.py  utils.py
tests/apis/: test_api_keys.py  test_cascade_delete.py  test_classfications_endpoint.py  test_dns_records_endpoint.py  test_domain.py  test_files.py  test_hars.py  test_htmls.py  test_ip_address.py  test_jobs.py  test_matches.py  test_matches_endpoint.py  test_rules.py  test_rules_endpoint.py  test_screenshots.py  test_scripts_endpoint.py  test_snapshots.py  test_snapshots_endpoint.py  test_urlscan.py  test_urlscan_endpoint.py  test_whoises.py  test_yara.py  test_yara_endpoint.py
tests/dataclasses/: test_ip2asn.py
tests/endpoints/: test_snapshots_endpoint.py  test_urlscan_endpoint.py  test_yara_endpoint.py
tests/factories/: test_classification.py  test_classifications.py  test_dns_record.py  test_dns_records.py  test_domain.py  test_indicators.py  test_ip_address.py  test_script.py  test_scripts.py  test_status.py  test_stylesheet.py
tests/fixtures/: test.html  urlscan.json  w3c.har
tests/models/: test_api_key.py  test_snapshot.py  test_snapshots_model.py
tests/schemas/: test_device.py  test_rule.py  test_rules.py  test_similarity.py  test_snapshot.py  test_snapshots.py
tests/services/: test_browser.py  test_certificate.py  test_classifications.py  test_dns_records.py  test_fake_browser.py  test_har.py  test_html2text.py  test_matches_converter.py  test_rule_matcher.py  test_screenshot.py  test_scripts.py  test_similarity_scanner.py  test_snapshot.py  test_urlscan.py  test_utils.py  test_whois.py  test_yara_scanner.py
tests/tasks/: test_match.py  test_matches.py  test_matches_task.py  test_snapshot.py  test_snapshots.py  test_snapshots_task.py
tests/types/: test_ulid.py
tests/utils/: test_chunk.py  test_http.py  test_network.py  test_screenshot.py  test_snapshot.py  test_url.py  test_validator.py
uzen/: __init__.py  browser.py  certificate.py  datastructures.py  dependencies.py  models.py  responses.py  settings.py  urlscan.py  utils.py  whois.py  yara.py
uzen/api/: api.py
uzen/core/: events.py  settings.py
uzen/endpoints/: __init__.py  snapshots.py  test.py  urlscan.py  yara.py
uzen/factories/: classifications.py  dns_records.py  domain.py  ip_address.py  scripts.py
uzen/models/: __init__.py  base.py  classifications.py  dns_records.py  matches.py  rules.py  screenshots.py  scripts.py  (+1 more)
(+383 files in other folders)
