[tool.poetry]
name = "uzen"
version = "0.1.0"
description = "YARA with Puppeteer"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiocache = "^0.11.1"
aiofiles = "^0.7.00"
aiometer = "^0.3.0"
aiomysql = "^0.0.21"
aioredis = "1.3.1"
aiosqlite = "^0.16.1"
arq = "^0.22"
beautifulsoup4 = "^4.10.0"
cached-property = "^1.5.2"
certifi = "^2021.5.30"
d8s-hashes = "^0.6.0"
d8s-urls = "^0.6.0"
dataclasses-json = "0.5.5"
dateparser = "^1.1.0"
dnspython = "^2.1.0"
fastapi = "^0.70.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.3"}
html2text = "^2020.1.16"
httpx = "^0.20.0"
loguru = "^0.5.3"
minio = "^7.1.1"
niteru = "^0.2.0"
playwright = "^1.15.3"
playwright-har-tracer = "^0.3.1"
pyhumps = "^3.0.2"
pyopenssl = "^21.0.0"
tldextract = "^3.1.2"
tortoise-orm = "^0.17.8"
ujson = "^4.2.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
whois-parser = "^0.1.0"
yara-python = "^4.1.2"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.9b0"
coveralls = "^3.2.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
nest-asyncio = "^1.5.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-parallel = "^0.1.1"
pytest-randomly = "^3.10.1"
pytest-sugar = "^0.9.4"
pytest-timeout = "^2.0.1"
pyupgrade = "^2.29.0"
respx = "^0.18.0"
vcrpy = "^4.1.1"

[tool.taskipy.tasks]
app = "uvicorn app:app --reload"
worker = "arq app.arq.worker.WorkerSettings --watch ./"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["OpenSSL", "aiometer", "alembic", "bs4", "dns", "fastapi", "fastapi_utils", "httpx", "ipwhois", "loguru", "playwright", "pydantic", "pyppeteer", "pysafebrowsing", "pytest", "requests", "respx", "sqlalchemy", "starlette", "tortoise", "vcr", "whois", "yara"]
line_length = 88
multi_line_output = 3
use_parentheses= true

[tool.pytest.ini_options]
env = ["IP2ASN_WEB_SERVICE_URL=http://127.0.0.1:80", "TESTING=True", "workers=auto"]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
