[tool.poetry]
name = "uzen"
version = "1.0.0"
description = "YARA with Puppeteer"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiocache = "^0.11.1"
aiofiles = "^0.8.0"
aiometer = "^0.3.0"
aiomysql = "^0.1.1"
aioredis = "1.3.1"
aiosqlite = "^0.17.0"
arq = "^0.22"
arrow = "^1.2.2"
beautifulsoup4 = "^4.11.1"
cached-property = "^1.5.2"
certifi = "^2022.6.15"
dataclasses-json = "^0.5.7"
dateparser = "^1.1.1"
dnspython = "^2.2.1"
fastapi = "^0.79.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.3"}
gunicorn = "^20.1.0"
html2text = "^2020.1.16"
httpx = "^0.23.0"
loguru = "^0.6.0"
minio = "^7.1.11"
niteru = "^0.2.1"
playwright = "1.25.1"
ppdeep = "^20200505"
pyhumps = "^3.7.2"
pyopenssl = "^22.0.0"
python-ulid = "^1.1.0"
sentry-sdk = "^1.9.5"
tldextract = "^3.3.1"
tortoise-orm = "0.19.2"
ujson = "^5.4.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
whois-parser = "^0.1.4"
yara-python = "^4.2.3"
watchgod = "^0.8.2"

[tool.poetry.dev-dependencies]
async-timeout = "3.0.1"
autoflake = "^1.4"
autopep8 = "^1.6.0"
black = "^22.6.0"
coveralls = "^3.3.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
nest-asyncio = "^1.5.5"
pre-commit = "^2.20.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-mock = "^3.8.2"
pytest-parallel = "^0.1.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-timeout = "^2.1.0"
pyupgrade = "^2.37.3"
requests = "^2.28.1"
respx = "^0.19.2"
vcrpy = "4.2.0"

[tool.taskipy.tasks]
app = "uvicorn app:app --reload"
worker = "arq app.arq.worker.WorkerSettings --watch ./"


[tool.pytest.ini_options]
env = ["IP2ASN_WEB_SERVICE_URL=http://127.0.0.1:80", "TESTING=True", "workers=auto"]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
